fixed overflow-wrap: break-word on profile page

--- a/jk_backend/public/css/profile/profile-m.less
+++ b/jk_backend/public/css/profile/profile-m.less
@@ -103,6 +103,8 @@
     position: relative;
     font-size: 12px;
     font-family: cursive;
+    overflow-wrap: break-word;
+    
   }
 }
 
